--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@tensorflow-models/toxicity": "^1.2.2",
     "@tensorflow/tfjs": "^2.3.0",
     "@tensorflow/tfjs-node": "^2.3.0",
+    "bcrypt": "^5.0.0",
+    "dotenv": "^8.2.0",
     "http": "0.0.1-security",
+    "mongoose": "^5.10.3",
     "socket.io": "^2.3.0",
     "socket.io-encrypt": "^0.2.1",
     "standard": "^14.3.4"
